# MusicSyncTool

./: .clang-format  .claudiaideconfig  .gitignore  AboutPage.cpp  AboutPage.h  AboutPage.ui  CMakeLists.txt  CopyResult.cpp  CopyResult.h  LoadingOperation.cpp  LoadingOperation.h  LoadingPage.cpp  LoadingPage.h  LoadingPage.ui  LoadingTitle.h  MSTDataSource.cpp  MSTDataSource.h  MusicProperties.h  MusicSyncTool.cpp  MusicSyncTool.h  MusicSyncTool.qrc  MusicSyncTool.sln  MusicSyncTool.ui  MusicSyncTool.vcxproj  MusicSyncTool.vcxproj.filters  OperationResult.cpp  OperationResult.h  README.md  README_en_US.md  SettingEntity.h  Settings.cpp  Settings.h  Settings.ui  ShowDupe.cpp  ShowDupe.h  ShowDupe.ui  Translation_Wenyan.ts  Translation_en_US.ts  Translation_zh_Hans.ts  init.sh  (+7 more)
docs/: README.md  README_en_US.md  vx.json
docs/classes/zh_CN/: MusicSyncTool.md
docs/vx_notebook/: notebook.db  vx_notebook.json
forms/: AboutPage.ui  AddRuleWidget.ui  LoadingPage.ui  MusicSyncTool.ui  Settings.ui
resources/: titles.txt
src/: AboutPage.cpp  AboutPage.h  AddRuleWidget.cpp  AddRuleWidget.h  LinuxSingleInstance.h  LoadingPage.cpp  LoadingPage.h  Logger.cpp  Logger.h  LyricIgnoreRule.cpp  LyricIgnoreRule.h  LyricIgnoreRuleSingleton.cpp  LyricIgnoreRuleSingleton.h  MSTDataSource.cpp  MSTDataSource.h  MSTMediaPlayer.cpp  MSTMediaPlayer.h  MusicProperties.h  MusicSyncTool.cpp  MusicSyncTool.h  OperationResult.cpp  OperationResult.h  QueryItem.cpp  QueryItem.h  SettingEntity.h  Settings.cpp  Settings.h  ShowDupe.h  SingleInstance.h  main.cpp
translations/: Translation_Wenyan.ts  Translation_en_US.ts  Translation_zh_Hans.ts
